# api/tags/schemas.py
@@ -1,8 +1,6 @@
-from typing import List
-
 from mixins.schema import BaseSchema
 
 
-class BookTagBase(BaseSchema):
-    uuids: List[str]
+class TagCreate(BaseSchema):
+    """タグ作成スキーマ"""
     name: str
